
2009-07-05
Initial Project in ajcodekatas
Lexer and tests, initial version
PrintCommand
PrintLineCommand
AddExpression, SubtractExpression
Parser and tests, initial version
AjClipper.Console running HelloWorld.prg

2009-07-06
If Command parsing and execution (initial version)
If with Else
If with ElseIf
While command with tests
Initial binary expressions Add Subtract
Name expression
Multiply, Divide Expression
Parse Binary Expression Level 1 and 2

2009-07-13
Parsing Procedure with Parameters, with tests
Example Tests SimpleAssignment.prg

2009-12-09
Comparison operators
CompareExpression w/Tests
Compare in Parser w/Tests
SimpleIf.prg
SimpleProcedure.prg Work in progress
Local, Public, Normal environments with tests
Define local and public variables in environments with tests